packages/svelte/tests/compiler-errors/samples/runes-wrong-state-args/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'rune_invalid_arguments_length',
		message: '`$state` must be called with at most two arguments'
	}
});
